--- a/styles.css
+++ b/styles.css
@@ -114,7 +114,7 @@ header {
 
 header img {
   width: 100%;
-  max-height: 200px;
+  max-height: 400px;
 }
 
 div > a {
@@ -255,4 +255,32 @@ body {
 /* Show the tooltip text when you mouse over the tooltip container */
 #tooltip:hover .tooltiptext {
   visibility: visible;
+}
+
+@import url(https://fonts.googleapis.com/css?family=Raleway);
+body {
+  margin: 0px;
+}
+nav {
+  padding: 24px;
+  text-align: center;
+  font-family: Raleway;
+  box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5);
+}
+#nav-1 {
+  background: #0062cc;
+}
+.link-1 {
+    transition: 0.6s;
+    color: #ffffff;
+    font-size: 20px;
+    text-decoration: none;
+    border-right: 2px dotted transparent;
+    padding: 30px 8px 0 10px;
+    margin: 0 10px;
+}
+.link-1:hover {
+  background-color: #ffffff;
+    color: #EEA200;
+    padding: 24px 10px;
 }
